plugins {
    id 'maven-publish'
    id 'net.fabricmc.fabric-loom-remap' version '1.15.+'
    id 'ploceus' version '1.15-SNAPSHOT'
}
ploceus {
	setIntermediaryGeneration(2)
}


version = property("mod_version")
group = property("maven_group")

base {
    archivesName = project.archives_base_name
}

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

loom {
    if (project.hasProperty("accesswidener_name") && project.accesswidener_name.length() > 0) {
        accessWidenerPath = file("src/main/resources/${project.accesswidener_name}.classTweaker")
    }
}

repositories {
    // Used for Babric Loom Extensions
    maven {
        name = "Babric"
        url = "https://maven.glass-launcher.net/babric"
    }

    // Used for many dependencies
    maven {
        name = "Glass Releases"
        url = "https://maven.glass-launcher.net/releases"
    }

    // Used for Snapshots
    maven {
        name = "Glass Snapshots"
        url = "https://maven.glass-launcher.net/snapshots"
    }

    // NyaRepo
    maven {
        name = "NyaRepo"
        url = "https://maven.fildand.cz/releases"
    }

    // Used for a StationAPI dependency.
    maven {
        name = "Froge Maven"
        url = "https://maven.minecraftforge.net/"
    }

    // Used for projects that do not have a maven repository, but do have a GitHub repository with working build scripts.
    maven {
        name = "Jitpack"
        url = "https://jitpack.io"
    }

    // Modrinth Maven
    exclusiveContent {
        forRepository {
            //noinspection ForeignDelegate
            maven {
                name = "Modrinth"
                url = "https://api.modrinth.com/maven"
            }
        }
        filter {
            includeGroup "maven.modrinth"
        }
    }

    mavenCentral()
    maven { url = "https://maven.ornithemc.net/releases" }
    maven { url = "https://mvn.devos.one/releases" }
    maven { url = "https://matthewperiut.github.io/repository" }
}

dependencies {
    minecraft "com.mojang:minecraft:${project.minecraft_version}"
    mappings(ploceus.mappings("net.glasslauncher:biny-ornithe:b1.7.3+build.${project.biny_mappings}:mergedv2"))

    clientExceptions ploceus.raven(project.client_raven_build, 'client')
    serverExceptions ploceus.raven(project.server_raven_build, 'server')
    clientSignatures ploceus.sparrow(project.client_sparrow_build, 'client')
    serverSignatures ploceus.sparrow(project.server_sparrow_build, 'server')
    "clientNests"("net.glasslauncher:biny-nests:b1.7.3-client+build.2")
    "serverNests"("net.glasslauncher:biny-nests:b1.7.3-server+build.2")
    modImplementation "net.fabricmc:fabric-loader:${project.loader_version}"

    implementation "org.slf4j:slf4j-api:1.8.0-beta4"
    implementation "org.apache.logging.log4j:log4j-slf4j18-impl:2.17.2"
    implementation "me.carleslc:Simple-Yaml:1.8.4"

    modImplementation("maven.modrinth:3d-dropped-item-stationapi:1.3-gen2-b1.7.3")

    modImplementation("net.modificationstation:StationAPI:${project.stapi_version}")

    // TODO: will be add after ornithe version release
    // modImplementation("net.glasslauncher.mods:AlwaysMoreItems:${project.alwaysmoreitems_version}") {
    // transitive false
    // }

    modImplementation("net.glasslauncher.mods:GlassConfigAPI:${project.gcapi_version}") {
    	transitive = false
    }

    // TODO: will be add after ornithe version release
    // modImplementation("maven.modrinth:unitweaks:${project.unitweaks_version}-b1.7.3") {
    // transitive = false
    // }


    modImplementation "com.periut:starac:${project.starac_version}"
}
// Exclude Legacy Fabric LWJGL 2 wrapper (starac provides LWJGL 3)
configurations.configureEach {
	exclude group: 'org.lwjgl.lwjgl'
}


processResources {
    inputs.property "version", project.version

    filesMatching("fabric.mod.json") {
        expand "version": project.version
    }
}

tasks.withType(JavaCompile).configureEach {
    it.options.release = 21
}

// Disables the generation of the .module file
tasks.withType(GenerateModuleMetadata).configureEach {
    enabled = false
}

// Gradle 9 fails the build if there are no tests, but we are using the test package for a test mod
tasks.withType(Test).configureEach {
    failOnNoDiscoveredTests = false
}

java {
    withSourcesJar()
}

jar {
    from("LICENSE") {
        rename { "${it}_" + base.archivesName.get() }
    }
}